applications/jenkins-cn-north4-2-internal-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins-internal-service
  name: jenkins-internal-service
