applications/jenkins-cn-north4-2-internal-service/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: jenkins-openatom-ingress
  namespace: jenkins-internal-service
spec:
  rules:
  - host: jenkins.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - jenkins.openeuler.openatom.cn
    secretName: jenkins-openatom-tls
