applications/jenkins-cn-north4-2-internal-service/openeuler-ci.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-ci-ingress
  namespace: jenkins-internal-service
spec:
  tls:
    - hosts:
        - ci-tool.osinfra.cn
      secretName: openeuler-ci-tls
  rules:
    - host: ci-tool.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openeuler-ci-service
              servicePort: 80
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-ci-service
  namespace: jenkins-internal-service
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: openeuler-ci
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-ci
  namespace: jenkins-internal-service
  annotations:
    email: 469227928@qq.com
    owner: liuqi
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: openeuler-ci
  template:
    metadata:
      labels:
        app: openeuler-ci
    spec:
      containers:
      - name: openeuler-ci
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-ci:ed7c6d6838289387fa6d8ff18e435b3245e5046c
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
